fix: progress bar completed visibility when less than 10

--- a/components/content/robbery/RobberyContent.module.scss
+++ b/components/content/robbery/RobberyContent.module.scss
@@ -8,13 +8,13 @@
     margin-bottom: $size-32;
   }
 
+  .robberyResultInfo {
+    width: $full-size;
+  }
+
   .robberyContainer {
     @include flexbox($flex-wrap: wrap);
     column-gap: $size-8;
-
-    .robberyResultInfo {
-      flex: 1;
-    }
 
     .placeContainer {
       align-self: flex-start;
